# hs-parse

./: .gitignore  downloaded.html  hs-parse.cabal  hs-parser.cabal  html-parse.cabal  table.html
exe/: Main.hs
src/: EventProcessing.hs  Geocode.hs  Main.hs  Network.hs  Parse.hs  Types.hs
src/HSParser/: Export.hs  Types.hs
src/HSParser/Internal/: EventProcessing.hs  Geocode.hs  Network.hs  Parsing.hs
test/: Tests.hs
test/html/: event.html  table.html
