name:                hs-parse
version:             0.0.0.3
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/html-parse#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     EventProcessing,
                       Parse,
                       Types,
                       Network
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       text >= 1.2,
                       split >= 0.2,
                       bytestring >= 0.10,
                       aeson >= 0.11,
                       cassava >= 0.4,
                       wreq >= 0.4, 
                       http-client >= 0.4,
                       lens >= 4.14,
                       tagsoup >= 0.14
  ghc-options:         -Wall

executable hs-parse-exe
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       hs-parse,
                       bytestring >= 0.10,
                       cassava >= 0.4,
                       aeson >= 0.11,
                       aeson-pretty >= 0.8
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall

test-suite hs-parse-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  build-depends:       base,
                       hs-parse,
                       lens,
                       HUnit
                       
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

