name:                hs-parser
version:             0.0.0.3
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/html-parse#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HSParser.Internal.EventProcessing,
                       HSParser.Internal.Parsing,
                       HSParser.Internal.Network,
                       HSParser.Types,
                       HSParser.Export
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       text >= 1.2,
                       split >= 0.2,
                       bytestring >= 0.10,
                       aeson >= 0.11,
                       aeson-pretty >= 0.7.2,
                       cassava >= 0.4,
                       wreq >= 0.4, 
                       http-client >= 0.4,
                       lens >= 4.13,
                       tagsoup >= 0.13.10
  ghc-options:         -Wall

executable hs-parser-exe
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       bytestring >= 0.10,
                       hs-parser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall

test-suite hs-parser-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  build-depends:       base,
                       hs-parser,
                       lens,
                       HUnit
                       
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

